# safespace-ai-agent

./: .gitignore  frontend.py  pyproject.toml
backend/: agent.py  main.py  test_tool.py  tools.py
